        - Querying of plugin controller values in DssiSynthIF::getData, PluginI::apply, and volume/pan 
           controllers in AudioTrack::copyData/addData is now done at a more proper and accurate 
           frame time instead of wallclock-based queries via AudioTrack::volume/pan/pluginCtrlVal.
          (Sorry, this does not mean frame accuracy on playback yet.)
20.05.2012:
        - MusE can now compile with clang/llvm via -DCMAKE_CXX_COMPILER=clang++ flag to cmake. (Orcan)
        - Update some URLs in README. (Orcan)
18.05.2012:
        - Added Czech translation by Pavel Fric[pavelfric@seznam.cz] (rj)
        - fixed native GUIs not updating                            (flo93)
                - removed _guiUpdate{Program,Control[]}
                - OscIF now stores the native GUI's state
                - OscIF doesn't send control changes if they don't differ from the
                    native GUI's state (until enforced)
08.05.2012:
        - ladspa/dssi/simplesynth controls: Fixed logarithmic defaults. (Tim)
           Use log not log10 in plugin.cpp:ladspaDefaultValue(). 
        - ladspa/dssi/simplesynth controls: A better default than 1.0 if none found, compute from upper/lower. (Tim)
           In plugin.cpp:ladspaDefaultValue(). TODO: simplesynth controls still wrong. 
        - ladspa: TAP Reverberator built-in MusE GUI: Fixed wet/dry infinity display "---". (Tim)
           Added DoubleLabel 'offValue' Qt property. Set in file 2142.ui 
07.05.2012:
        - DSSI: Fixed second of two crashes when operating controls while playing notes. (Tim)
          Just ignore rare out-of-order events.
06.05.2012:
        - Added automation right-click remove point and printout with current value, also started 
          working towards editing multiple points (rj)
        - Fixed crash bug in pianoroll when using arrow keys on an empty part (rj)